# cookiecutter-python-mini

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_name }}/: README.md  pyproject.toml
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: main.py
{{ cookiecutter.project_name }}/tests/: test_main.py
