[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
packages = [{include = "{{cookiecutter.project_slug}}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.4.2"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
